# py-toxcore-c

./: BUILD.bazel  Dockerfile  setup.py
.circleci/: config.yml
.github/: settings.yml
examples/: echo.py  phone.py
pytox/: helloworld.pyx
pytox/toxav/: toxav.pxd  toxav.pyi  toxav.pyx
pytox/toxcore/: tox.pxd  tox.pyi  tox.pyx
pytox/toxencryptsave/: toxencryptsave.pxd  toxencryptsave.pyi  toxencryptsave.pyx
test/: BUILD.bazel  group_test.py  tox_options_test.py  tox_test.py  toxav_test.py  toxencryptsave_test.py
test/auto_tests/: auto_test.py  self_connection_status_test.py
tests/: tests.py
tools/: BUILD.bazel  chatbot.py  gen-api  stubgen.py
tools/groupbot/: BUILD.bazel  api.py  commands.py  groupbot.py  groupbot.tox
tools/groupbot/plugins/: github.py
