load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "stubgen",
    srcs = ["stubgen.py"],
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
    deps = [
        "//py_toxcore_c:pytox",
    ],
)

py_binary(
    name = "chatbot",
    srcs = ["chatbot.py"],
    tags = ["no-cross"],
    deps = ["//py_toxcore_c:pytox"],
)
